--- a/about_us.html
+++ b/about_us.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About_us</title>
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
   <link rel="stylesheet" href="about_us.css">
 </head>
 <body>
     <header>
         <div class="logo">
-          <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo"/></a>
+          <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo"/></a>
         </div>
         <nav>
           <a href="index.html" >Home</a>
