--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+      <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
     <nav>
       <a href="index.html">Home</a>
