--- a/contactus.html
+++ b/contactus.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-      <link rel="icon" href="/images/spark.png" type="image/x-icon">
+      <link rel="icon" href="images/spark.png" type="image/x-icon">
     <link rel = "stylesheet" href= "contactUs.css">
 </head>
 <body>
   <header>
     <div class="logo">
-       <a href= "index.html"><img src="/images/cattt.png" alt="Catrionics Logo" /></a>
+       <a href= "index.html"><img src="images/cattt.png" alt="Catrionics Logo" /></a>
     </div>
     <nav>
         <a href="index.html">Home</a>
@@ -62,7 +62,7 @@
                     <button type="submit">Send Now</button>
                 </form>
                 <div class="contact-us">
-                    <img src="/images/contact-us.jpg" alt="contact us">
+                    <img src="images/contact-us.jpg" alt="contact us">
                 </div>
             </div>
            </div>
