--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>CAITRONICS - Home</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+      <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
     <nav>
       <a href="index.html" >Home</a>
