--- a/section2.html
+++ b/section2.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Caitronics Products</title>
   <link rel="stylesheet" href="section2.css">
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+      <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
   <div class="container">
   <div class="product-grid">
       <div class="product">
-        <img src="/images/diode.jpeg" alt="Diodes">
+        <img src="images/diode.jpeg" alt="Diodes">
         <h2>Diodes</h2>
         <h3>(1N4007, 1A/1000V)</h3>
         <h4>An electronic component that lets current flow in one direction.</h4>
@@ -39,7 +39,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/zenerdiode.jpeg" alt="Zener Diodes">
+        <img src="images/zenerdiode.jpeg" alt="Zener Diodes">
         <h2>Zener Diodes</h2>
         <h3>(5.1V/0.5W)</h3>
         <h4>Allows current to flow in reverse when the Zener voltage is reached.</h4>
@@ -53,7 +53,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/photodiode.jpeg" alt="Photo Diodes">
+        <img src="images/photodiode.jpeg" alt="Photo Diodes">
         <h2>Photo Diodes</h2>
         <h3>(BP333 , infrared LED)</h3>
         <h4>Used in sensors and light detection.</h4>
@@ -67,7 +67,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/cap.01u.jpeg" alt="Ceramic Capacitors">
+        <img src="images/cap.01u.jpeg" alt="Ceramic Capacitors">
         <h2>Ceramic Capacitors</h2>
         <h3>(0.01uF)</h3>
         <h4>Commonly used for filtering and bypassing.</h4>
@@ -81,7 +81,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/transistore47.jpeg" alt="Transistor BC547">
+        <img src="images/transistore47.jpeg" alt="Transistor BC547">
         <h2>Transistor</h2>
         <h3>(BC547)</h3>
         <h4>Amplifies or switches electronic signals.</h4>
@@ -97,7 +97,7 @@
     </div>
     <div class="product-grid">  
       <div class="product">
-        <img src="/images/transistore57.jpeg" alt="Transistor BC557">
+        <img src="images/transistore57.jpeg" alt="Transistor BC557">
         <h2>Transistor</h2>
         <h3>(BC557)</h3>
         <h4>Amplifies or switches electronic signals.</h4>
@@ -111,7 +111,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/cap0.1u.jpeg" alt="Ceramic Capacitor">
+        <img src="images/cap0.1u.jpeg" alt="Ceramic Capacitor">
         <h2>Ceramic Capacitor</h2>
         <h3>(0.1uF)</h3>
         <h4>Used for filtering and bypassing.</h4>
@@ -125,7 +125,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/electrocap.jpeg" alt="Electrolytic Capacitor">
+        <img src="images/electrocap.jpeg" alt="Electrolytic Capacitor">
         <h2>Electrolytic Capacitor</h2>
         <h3>(4.7 uF/400 V)</h3>
         <h4>Used for energy storage.</h4>
@@ -139,7 +139,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/ultracap.jpeg" alt="Ultra Capacitor">
+        <img src="images/ultracap.jpeg" alt="Ultra Capacitor">
         <h2>Ultra Super Capacitor</h2>
         <h3>(30 F/ 2.7 V)</h3>
         <h4>Used in energy storage and backup systems.</h4>
@@ -153,7 +153,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/micacap.jpeg" alt="Mica Capacitor">
+        <img src="images/micacap.jpeg" alt="Mica Capacitor">
         <h2>Mica Capacitor</h2>
         <h3>( 7.5 nF/1600 V)</h3>
         <h4>Used for high-frequency and RF applications.</h4>
