--- a/section4.html
+++ b/section4.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Caitronics Products</title>
     <link rel="stylesheet" href="section4.css">
-    <link rel="icon" href="/images/spark.png" type="image/x-icon">
+    <link rel="icon" href="images/spark.png" type="image/x-icon">
   </head>
   <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+        <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
       </div>
       <nav>
         <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
     <h1 class="main-title">ICs, Batteries & LEDs</h1>
     <div class="container">
       <div class="product">
-        <img src="/images/LEDbulb.jpeg " alt="LEDs">
+        <img src="images/LEDbulb.jpeg " alt="LEDs">
         <h2>LED Bulb</h2>
         <label for="led-color">Choose Color:</label>
         <select class="led-color" data-product-id="1">
@@ -45,7 +45,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/100pcscoloredLEDs.jpeg " alt="Standard LED">
+        <img src="images/100pcscoloredLEDs.jpeg " alt="Standard LED">
         <h2>100 pcs colored LEDs</h2>
         <p>Price: 100 L.E</p>
         <div class="quantity-control">
@@ -57,7 +57,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/TransparentLED.jpeg.jpeg " alt="Transparent LED">
+        <img src="images/TransparentLED.jpeg.jpeg " alt="Transparent LED">
         <h2>Transparent LED</h2>
         <p>Price: 5 L.E</p>
         <div class="quantity-control">
@@ -69,7 +69,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/BlueLED.jpeg" alt="Blue LED">
+        <img src="images/BlueLED.jpeg" alt="Blue LED">
         <h2>Blue LED</h2>
         <p>Price: 6 L.E</p>
         <div class="quantity-control">
@@ -81,7 +81,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/20pcstransparentLEDs.jpeg" alt="High Power LED">
+        <img src="images/20pcstransparentLEDs.jpeg" alt="High Power LED">
         <h2>20 pcs transparent LEDs</h2>
         <p>Price: 30 L.E</p>
         <div class="quantity-control">
@@ -105,7 +105,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/Battery6V.jpeg" alt="Battery">
+        <img src="images/Battery6V.jpeg" alt="Battery">
         <h2>Battery 6V</h2>
         <p>Price: 40 L.E</p>
         <div class="quantity-control">
@@ -117,7 +117,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/Battery9V.jpeg" alt="Battery">
+        <img src="images/Battery9V.jpeg" alt="Battery">
         <h2>Battery 9V</h2>
         <p>Price: 60 L.E</p>
         <div class="quantity-control">
@@ -129,7 +129,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/TDA0161DP(ProximityDetectorIC).jpeg.jpeg" alt="ICs">
+        <img src="images/TDA0161DP(ProximityDetectorIC).jpeg.jpeg" alt="ICs">
         <h2>TDA0161DP (Proximity Detector IC)</h2>
         <p>Price: 60 L.E</p>
         <div class="quantity-control">
@@ -141,7 +141,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/CD4070BE(QuadXORGate).jpeg" alt="ICs">
+        <img src="images/CD4070BE(QuadXORGate).jpeg" alt="ICs">
         <h2>CD4070 BE (Quad XOR Gate)</h2>
         <p>Price: 25 L.E</p>
         <div class="quantity-control">
@@ -153,7 +153,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/TOP258PN(ACDCConverter35W).jpeg" alt="ICs">
+        <img src="images/TOP258PN(ACDCConverter35W).jpeg" alt="ICs">
         <h2>TOP258PN (AC/DC Converter 35W)</h2>
         <p>Price: 40 L.E</p>
         <div class="quantity-control">
@@ -165,7 +165,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/HT12DDecoder.jpeg" alt="ICs">
+        <img src="images/HT12DDecoder.jpeg" alt="ICs">
         <h2>HT12D Decoder</h2>
         <p>Price: 40 L.E</p>
         <div class="quantity-control">
@@ -177,7 +177,7 @@
         <div class="message"></div> 
       </div>
       <div class="product">
-        <img src="/images/74125(Quad3-stateBuffer).jpeg" alt="ICs">
+        <img src="images/74125(Quad3-stateBuffer).jpeg" alt="ICs">
         <h2>74125 (Quad 3-state Buffer)</h2>
         <p>Price: 20 L.E</p>
         <div class="quantity-control">
