--- a/section5.html
+++ b/section5.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Caitronics Products</title>
   <link rel="stylesheet" href="section5.css">
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+      <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
     <nav>
       <a href="index.html">Home</a>
@@ -25,7 +25,7 @@
   <h1 class="main-title"> Motors, Sensors& Buzzers </h1>
   <div class="container1">
     <div class="card1">
-      <img class="product" src="/images/motor4.jpg" alt="motor">
+      <img class="product" src="images/motor4.jpg" alt="motor">
       <h2>Motor Driver Module</h2>
       <p class="price">price:35 LE </p>
       <button class="plus">+</button>
@@ -37,7 +37,7 @@
       </div>
     </div>
     <div class="card2">
-      <img class="product" src="/images/motor5.png" alt="motor">
+      <img class="product" src="images/motor5.png" alt="motor">
       <h2>Servo Motors</h2>
       <p class="price">price: 19.5 LE</p>
       <button class="plus">+</button>
@@ -49,7 +49,7 @@
       </div>
     </div>
     <div class="card3">
-      <img class="product" src="/images/motor6.png" alt="motor">
+      <img class="product" src="images/motor6.png" alt="motor">
       <h2>Small DC Motors</h2>
       <p class="price">price: 80 LE</p>
       <button class="plus">+</button>
@@ -61,7 +61,7 @@
       </div>
     </div>
     <div class="card4">
-      <img class="product" src="/images/Motor1.png" alt="motor">
+      <img class="product" src="images/Motor1.png" alt="motor">
       <h2>TT Motor</h2>
       <p class="price">price: 45 LE</p>
       <button class="plus">+</button>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="card6">
-      <img class="product" src="/images/sensor1.png" alt="sensor">
+      <img class="product" src="images/sensor1.png" alt="sensor">
       <h2>Temperature Sensor Cable</h2>
       <p class="price">price: 88 LE</p>
       <button class="plus">+</button>
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="card7">
-      <img class="product" src="/images/sensor2.png" alt="sensor">
+      <img class="product" src="images/sensor2.png" alt="sensor">
       <h2>Temperature Sensor</h2>
       <p class="price">price: 102 LE</p>
       <button class="plus">+</button>
@@ -111,7 +111,7 @@
       </div>
     </div>
     <div class="card8">
-      <img class="product" src="/images/sensor001.png" alt="sensor">
+      <img class="product" src="images/sensor001.png" alt="sensor">
       <h2>ecobee SmartSensor</h2>
       <p class="price">price: 60 LE</p>
       <button class="plus">+</button>
@@ -125,7 +125,7 @@
     </div>
     <div class="container3">
       <div class="card9"> 
-        <img class="product" src="/images/buzzer7.png" alt="buzzer">
+        <img class="product" src="images/buzzer7.png" alt="buzzer">
         <h2>Piezo buzzer</h2>
         <p class="price">price: 55 LE</p>
         <button class="plus">+</button>
@@ -137,7 +137,7 @@
         </div>
       </div>
     <div class="card10">
-      <img class="product" src="/images/buzzer2.png" alt="buzzer">
+      <img class="product" src="images/buzzer2.png" alt="buzzer">
       <h2>DC Piezo Buzzer</h2>
       <p class="price">price: 70 LE</p>
       <button class="plus">+</button>
@@ -149,7 +149,7 @@
       </div>
     </div> 
     <div class="card11">
-      <img class="product" src="/images/buzzer3.png" alt="buzzer">
+      <img class="product" src="images/buzzer3.png" alt="buzzer">
       <h2>Pasive Buzzer</h2>
       <p class="price">price: 13.5 LE</p>
       <button class="plus">+</button>
@@ -161,7 +161,7 @@
       </div>
     </div>
     <div class="card12">
-      <img class="product" src="/images/buzzer4.png " alt="buzzer">
+      <img class="product" src="images/buzzer4.png " alt="buzzer">
       <h2>50mm Buzzer Unit</h2>
       <p class="price">price: 75 LE</p>
       <button class="plus">+</button>
@@ -175,7 +175,7 @@
   </div>
     <div class="container4">
     <div class="card13">
-      <img class="product" src="/images/buzzer5.png" alt="buzzer">
+      <img class="product" src="images/buzzer5.png" alt="buzzer">
       <h2>Buzzer Module</h2>
       <p class="price">price: 15 LE</p>
       <button class="plus">+</button>
@@ -187,7 +187,7 @@
       </div>
     </div>
     <div class="card14">
-      <img class="product" src="/images/buzzer6.png" alt="buzzer">
+      <img class="product" src="images/buzzer6.png" alt="buzzer">
       <h2>Answer Buzzer</h2>
       <p class="price">price: 150 LE</p>
       <button class="plus">+</button>
