--- a/signup.html
+++ b/signup.html
@@ -5,13 +5,13 @@
   <title>Create new account page</title>
   <link href="login.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+      <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
     <nav>
       <a href="index.html" class="navlink">Home</a>
