--- a/store.html
+++ b/store.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="store.css">
     <title>Products</title>
-    <link rel="icon" href="/images/spark.png" type="image/x-icon">
+    <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 <body>
  <header>
     <div class="logo">
-        <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+        <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
       </div>
       <nav>
         <a href="index.html">Home</a>
@@ -25,13 +25,13 @@
     <div class="row row-1">
         <a href="section1.html" class="section-link" title=section1>
         <div class="section">
-            <img src="/images/section1.png" alt="Breadbord,wies,resistors">
+            <img src="images/section1.png" alt="Breadbord,wies,resistors">
             <p>click here to explore breadbords,wires,resistors</p>
          </div>
          </a>
          <a href="section2.html" class="section-link" title=section2>
          <div class="section">
-            <img src="/images/section2.png" alt="Diodes,transistors,capacitors">
+            <img src="images/section2.png" alt="Diodes,transistors,capacitors">
             <p>click here to explore Diodes,transistors,capacitors</p>
          </div>
         </a>
@@ -39,13 +39,13 @@
     <div class="row row-2">
         <a href="section3.html" class="section-link" title=section3>
             <div class="section">
-                <img src="/images/section3.png" alt="Switches,relay switch,push button">
+                <img src="images/section3.png" alt="Switches,relay switch,push button">
                 <p>click here to explore Switches,relay switch, push button </p>
             </div>
         </a>
         <a href="section4.html" class="section-link" title=section4>
         <div class="section">
-            <img src="/images/section4.png" alt="Battery,ICs,Leds">
+            <img src="images/section4.png" alt="Battery,ICs,Leds">
             <p>click here to explore Battery,ICs,Leds</p>
         </div>
         </a>
@@ -53,7 +53,7 @@
     <div class="row row-center">
         <a href="section5.html" class="section-link" title=section5>
             <div class="single section">
-                <img src="/images/section5.png" alt="Sensors,Motors,Buzzers">
+                <img src="images/section5.png" alt="Sensors,Motors,Buzzers">
                 <p>click here to explore Sensors,Motors,Buzzers</p>
 
             </div>
