--- a/section1.html
+++ b/section1.html
@@ -6,13 +6,13 @@
   <title>CAITRONIC Products </title>
   <link rel="stylesheet" href="section1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
       <div class="logo">
-        <a href="index.html"><img src="/images/cattt.png" alt="Caitronics Logo" /></a>
+        <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
         </div>
         <nav>
           <a href="index.html">Home</a>
@@ -30,8 +30,8 @@
     <div class="container">
     <div class="product">
       <div class="imges" data-delay="4000">
-        <img src="/images/wires.1.jpeg" alt="image not available" class="active" />
-        <img src="/images/wires.2.jpeg" alt="image not available" />
+        <img src="images/wires.1.jpeg" alt="image not available" class="active" />
+        <img src="images/wires.2.jpeg" alt="image not available" />
       </div>
       <div class="price">
         <p class="Price">Price: " 2 " L.E</p>
@@ -50,9 +50,9 @@
 
     <div class="product">
       <div class="imges" data-delay="4000">
-        <img src="/images/breadbod.1.jpeg" alt="image not available" class="active" />
-        <img src="/images/breadbord.3.jpeg" alt="image not available" />
-        <img src="/images/breadbord.4.jpeg" alt="image not available" />
+        <img src="images/breadbod.1.jpeg" alt="image not available" class="active" />
+        <img src="images/breadbord.3.jpeg" alt="image not available" />
+        <img src="images/breadbord.4.jpeg" alt="image not available" />
       </div> 
       <div class="price">
         <p class="Price">Price: " 60 " L.E</p>
@@ -70,7 +70,7 @@
     </div>
     
     <div class="product">
-      <img src="/images/res.1k.jpeg" alt="image not available" />
+      <img src="images/res.1k.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 5 " L.E</p>
         <p class="description"> Resistor 1 kilo OHM</p>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="product">
-      <img src="/images/res.100k.jpeg" alt="image not available" />
+      <img src="images/res.100k.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 3 " L.E</p>
         <p class="description"> Resistor 100 kilo ohm</p>
@@ -104,7 +104,7 @@
     </div>
 
     <div class="product">
-      <img src="/images/res220.jpeg" alt="image not available" />
+      <img src="images/res220.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 5 " L.E</p>
         <p class="description"> Resistor 220 OHM / 0.5 watt</p>
@@ -121,7 +121,7 @@
     </div>
 
     <div class="product">
-      <img src="/images/res.220.jpeg" alt="image not available" />
+      <img src="images/res.220.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 3 "L.E</p>
         <p class="description"> Resistor 220 OHM</p>
@@ -138,7 +138,7 @@
     </div>
 
     <div class="product">
-      <img src="/images/res2.2k.jpeg" alt="image not available" />
+      <img src="images/res2.2k.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 5 " L.E</p>
         <p class="description">Resistor 2.2 kilo OHM</p>
@@ -155,7 +155,7 @@
     </div>
 
     <div class="product">
-      <img src="/images/res10k.jpeg" alt="image not available" />
+      <img src="images/res10k.jpeg" alt="image not available" />
       <div class="price">
         <p class="Price">Price: " 10 " L.E</p>
         <p class="description"> Resistor 10 kilo OHM</p>
