--- a/section3.html
+++ b/section3.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Caitronics Products</title>
   <link rel="stylesheet" href="section3.css">
-  <link rel="icon" href="/images/spark.png" type="image/x-icon">
+  <link rel="icon" href="images/spark.png" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="product">
-                <img src="/images/SW4.ON.OFF.ONSW4-ON-OFF-ONSwitch3pin.jpg.jpg " alt="ON/OFF/ON Switch 3 pin">
+                <img src="images/SW4.ON.OFF.ONSW4-ON-OFF-ONSwitch3pin.jpg.jpg " alt="ON/OFF/ON Switch 3 pin">
         <h2>SW4 - ON/OFF/ON Switch 3 Pin</h2>
         <h3>Rocker Switch Up to 6A/250VAC</h3>
         <p>Price: 10.00 L.E</p>
@@ -38,7 +38,7 @@
         <div class="message"></div>
       </div>
       <div class="product">
-        <img src="/images/SW2.BLACK.2PINSW2-ON-OFFSwitch2pin.webp.webp" alt="SW2 - ON-OFF Switch 2 Pin">
+        <img src="images/SW2.BLACK.2PINSW2-ON-OFFSwitch2pin.webp.webp" alt="SW2 - ON-OFF Switch 2 Pin">
         <h2>SW2 - ON-OFF Switch 2 Pin</h2>
         <h3>Rocker Switch Up to 6A/250VAC</h3>
         <p>Price: 5.00 L.E</p>
@@ -53,7 +53,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/SW1.REDSW1-ON-OFFSwitchWithLED(2).jpg.jpg" alt="SW1 - ON-OFF Switch With LED">
+          <img src="images/SW1.REDSW1-ON-OFFSwitchWithLED(2).jpg.jpg" alt="SW1 - ON-OFF Switch With LED">
           <h2>SW1 - ON/OFF Switch With LED</h2>
           <h3>Up to 10A/250VAC</h3>
           <p>Price: 10.00 L.E</p>
@@ -66,7 +66,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/MetalSwitchOnOff12mmWhiteLEDRingWater-Dustproof.jpg " alt="Metal Switch On/Off 12mm White LED Ring Water-Dustproof">
+          <img src="images/MetalSwitchOnOff12mmWhiteLEDRingWater-Dustproof.jpg " alt="Metal Switch On/Off 12mm White LED Ring Water-Dustproof">
           <h2>Metal Switch On/Off 12mm White LED Ring Water-Dustproof</h2>
           <h3>2A/250VAC<br>IP67 Industrial Grade</h3>
           <p>Price: 125.00 L.E</p>
@@ -81,7 +81,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/PB.16.M.ON.OFF.GREENMetalSwitchOn-Off16mmGreenLEDRingWater-Dustproof.jpg.jpg" alt="Metal Switch On/Off 16mm Green LED Ring Water-Dustproof">
+          <img src="images/PB.16.M.ON.OFF.GREENMetalSwitchOn-Off16mmGreenLEDRingWater-Dustproof.jpg.jpg" alt="Metal Switch On/Off 16mm Green LED Ring Water-Dustproof">
           <h2>Metal Switch On/Off 16mm Green LED Ring Water-Dustproof</h2>
           <h3>3A/250VAC<br>IP67 Industrial Grade</h3>
           <p>Price: 145.00 L.E</p>
@@ -94,7 +94,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/PB.22.M.POWERMetalSwitch22mmWaterproofMetalwithPOWERSymbolRedLED.jpg.jpg" alt="Metal Switch 22mm Waterproof Metal with POWER Symbol Red LED">
+          <img src="images/PB.22.M.POWERMetalSwitch22mmWaterproofMetalwithPOWERSymbolRedLED.jpg.jpg" alt="Metal Switch 22mm Waterproof Metal with POWER Symbol Red LED">
           <h2>Metal Switch 22mm Waterproof Metal with POWER Symbol Red LED</h2>
           <del>195.00 L.E</del><p style="color: red; font-weight: bold;">Special Offer: 18% off!</p>
           <p>Price: 160.00 L.E</p>
@@ -109,7 +109,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/Switch16mmWirePlugConnector.jpg.jpg" alt="Switch 16mm Wire Plug Connector">
+          <img src="images/Switch16mmWirePlugConnector.jpg.jpg" alt="Switch 16mm Wire Plug Connector">
           <h2>Switch 16mm Wire Plug Connector</h2>
           <p>Price: 38.00 L.E</p>
           <div class="quantity-control">
@@ -121,7 +121,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/GeneralPurposeRelaySPDT(1FormC)12VDCCoil12AThroughHole5Pin.webp" alt="General Purpose Relay SPDT (1 Form C) 12VDC Coil 12A Through Hole 5 Pin" >
+          <img src="images/GeneralPurposeRelaySPDT(1FormC)12VDCCoil12AThroughHole5Pin.webp" alt="General Purpose Relay SPDT (1 Form C) 12VDC Coil 12A Through Hole 5 Pin" >
           <h2>General Purpose Relay SPDT (1 Form C) 12VDC Coil 12A Through Hole 5 Pin</h2>
           <p>Price: 15.00 L.E</p>
           <div class="quantity-control">
@@ -135,7 +135,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/SONGLEPowerRelay2-Ch12VDCCoil5A250VAC30VDC8PinSMI-12VDC-SL-2C.jpg.jpg" alt="SONGLE Power Relay 2-Ch 12VDC Coil 5A 250VAC/30VDC 8 Pin SMI-12VDC-SL-2C">
+          <img src="images/SONGLEPowerRelay2-Ch12VDCCoil5A250VAC30VDC8PinSMI-12VDC-SL-2C.jpg.jpg" alt="SONGLE Power Relay 2-Ch 12VDC Coil 5A 250VAC/30VDC 8 Pin SMI-12VDC-SL-2C">
           <h2>SONGLE Power Relay 2-Ch 12VDC Coil 5A 250VAC/30VDC 8 Pin SMI-12VDC-SL-2C</h2>
           <p>Price: 50.00 L.E</p>
           <div class="quantity-control">
@@ -147,7 +147,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/PowerRelayHF102FT-12VDCSPST-NO(1FormA)12VDCCoil25AThroughHole.png.png" alt="Power Relay HF102F/T-12VDC SPST-NO (1 Form A) 12VDC Coil 25A Through Hole">
+          <img src="images/PowerRelayHF102FT-12VDCSPST-NO(1FormA)12VDCCoil25AThroughHole.png.png" alt="Power Relay HF102F/T-12VDC SPST-NO (1 Form A) 12VDC Coil 25A Through Hole">
           <h2>Power Relay HF102F/T-12VDC SPST-NO (1 Form A) 12VDC Coil 25A Through Hole</h2>
           <p>Price: 95.00 L.E</p>
           <div class="quantity-control">
@@ -161,7 +161,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/ElectromagneticOMRONRelayLY2N-J4PD10A220VACCoil8PinPCBMount.jpg" alt="Electromagnetic OMRON Relay LY2N-J 4PDT 10A 220VAC Coil 8 Pin PCB Mount">
+          <img src="images/ElectromagneticOMRONRelayLY2N-J4PD10A220VACCoil8PinPCBMount.jpg" alt="Electromagnetic OMRON Relay LY2N-J 4PDT 10A 220VAC Coil 8 Pin PCB Mount">
           <h2>Electromagnetic OMRON Relay LY2N-J 4PDT 10A 220VAC Coil 8 Pin PCB Mount</h2>
           <p>Price: 55.00 L.E</p>
           <div class="quantity-control">
@@ -187,7 +187,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/OMRONElectromagneticRelayMK3P-I3PDT60VDCCoil11pinwithSocket.jpg" alt="OMRON Electromagnetic Relay MK3P-I 3PDT 60VDC Coil 11pin with Socket">
+          <img src="images/OMRONElectromagneticRelayMK3P-I3PDT60VDCCoil11pinwithSocket.jpg" alt="OMRON Electromagnetic Relay MK3P-I 3PDT 60VDC Coil 11pin with Socket">
           <h2>OMRON Electromagnetic Relay 11pin with Socket</h2>
           <del>150.00 L.E</del><p style="color: red; font-weight: bold;">Special Offer: 33.3% off!</p>
           <p>Price:100.00 L.E </p>
@@ -200,7 +200,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/PushButton4Pin(6x6x5mm).jpeg.jpeg" alt="Push Button 4Pin (6x6x5mm)">
+          <img src="images/PushButton4Pin(6x6x5mm).jpeg.jpeg" alt="Push Button 4Pin (6x6x5mm)">
           <h2>Push Button 4Pin (6x6x5mm)</h2>
           <p>Price: 0.75 L.E</p>
           <div class="quantity-control">
@@ -214,7 +214,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/PushButton2pins(6x6x5mm).jpeg.jpeg" alt="Push Button 2pins (6x6x5mm)">
+          <img src="images/PushButton2pins(6x6x5mm).jpeg.jpeg" alt="Push Button 2pins (6x6x5mm)">
           <h2>Push Button 2pins (6x6x5mm)</h2>
           <p>Price: 0.75 L.E</p>
           <div class="quantity-control">
@@ -226,7 +226,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/PushButtonLong4Pin(6x6x19mm).jpeg.jpeg" alt="Push Button Long 4Pin (6x6x19mm)">
+          <img src="images/PushButtonLong4Pin(6x6x19mm).jpeg.jpeg" alt="Push Button Long 4Pin (6x6x19mm)">
           <h2>Push Button Long 4Pin (6x6x19mm)</h2>
           <p>Price: 2.00 L.E</p>
           <div class="quantity-control">
@@ -240,7 +240,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/PushButtonLongRightAngle.jpeg.jpeg" alt="Push Button Long Right Angle 2Pin+2Base (7×7.5x3mm)">
+          <img src="images/PushButtonLongRightAngle.jpeg.jpeg" alt="Push Button Long Right Angle 2Pin+2Base (7×7.5x3mm)">
           <h2>Push Button Long Right Angle 2Pin+2Base (7×7.5x3mm)</h2>
           <p>Price: 1.50 L.E</p>
           <div class="quantity-control">
@@ -252,7 +252,7 @@
           <div class="message"></div>
         </div>
         <div class="product">
-          <img src="/images/SquarePushButtonSwitch.jpeg.jpeg" alt="Square Push Button Switch (DS-430)">
+          <img src="images/SquarePushButtonSwitch.jpeg.jpeg" alt="Square Push Button Switch (DS-430)">
           <h2>Square PushButton Switch (DS-430)</h2>
           <p>Price: 5.00 L.E</p>
           <div class="quantity-control">
@@ -266,7 +266,7 @@
     </div>
     <div class="row">
         <div class="product">
-          <img src="/images/RoundPushButton.jpeg.jpeg" alt="Round Push Button N.O (2Pin) Metal Key (16MM) Green">
+          <img src="images/RoundPushButton.jpeg.jpeg" alt="Round Push Button N.O (2Pin) Metal Key (16MM) Green">
           <h2>Round PushButton N.O (2Pin) Metal Key (16MM) Green</h2>
           <p>Price: 22.00 L.E</p>
           <div class="quantity-control">
