--- a/login.html
+++ b/login.html
@@ -3,6 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login account page</title>
   <link href="login.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -13,6 +18,8 @@
       <div class="logo">
         <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
       </div>
+           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
       <nav>
         <a href="index.html" >Home</a>
         <a href="store.html" >Products</a>
