--- a/about_us.html
+++ b/about_us.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="">
   <title>About_us</title>
   <link rel="icon" href="images/spark.png" type="image/x-icon">
   <link rel="stylesheet" href="about_us.css">
@@ -12,6 +16,8 @@
         <div class="logo">
           <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo"/></a>
         </div>
+                <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
         <nav>
           <a href="index.html" >Home</a>
           <a href="store.html" >Products</a>
@@ -20,6 +26,7 @@
           <a href="cart.html" >Cart</a>
         </nav>
         <button id="mode-toggle" class="mode-btn">Light Mode</button>
+
       </header>
   <div class="container">
     <h1>CAITRONICS</h1>
