--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cart </title>
   <link rel="stylesheet" href="cart.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,6 +15,8 @@
     <div class="logo">
       <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
+       <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
     <nav>
       <a href="index.html">Home</a>
       <a href="store.html">Products</a>
