--- a/contactus.html
+++ b/contactus.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="">
     <title>Contact Us</title>
       <link rel="icon" href="images/spark.png" type="image/x-icon">
     <link rel = "stylesheet" href= "contactUs.css">
@@ -12,6 +16,7 @@
     <div class="logo">
        <a href= "index.html"><img src="images/cattt.png" alt="Catrionics Logo" /></a>
     </div>
+     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav>
         <a href="index.html">Home</a>
         <a href="store.html">Products</a>
