--- a/section1.html
+++ b/section1.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=7">
+  <meta name="description" content="">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="keywords" content="">
   <title>CAITRONIC Products </title>
   <link rel="stylesheet" href="section1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
@@ -14,6 +18,8 @@
       <div class="logo">
         <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
         </div>
+             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
         <nav>
           <a href="index.html">Home</a>
           <a href="store.html">Products</a>
