--- a/section4.html
+++ b/section4.html
@@ -12,6 +12,8 @@
       <div class="logo">
         <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
       </div>
+           <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
       <nav>
         <a href="index.html">Home</a>
         <a href="store.html">Products</a>
