--- a/signup.html
+++ b/signup.html
@@ -13,6 +13,8 @@
     <div class="logo">
       <a href="index.html"><img src="images/cattt.png" alt="Caitronics Logo" /></a>
     </div>
+         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
     <nav>
       <a href="index.html" class="navlink">Home</a>
       <a href="store.html" class="navlink">Products</a>
